<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To PDF</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="video_gif">Video to GIF \n Converter</string>
    <string name="convert">Convert</string>
    <string name="select_start">Select a Video to Start</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="convert_error">Convert Error!</string>
    <string name="home">Home</string>
    <string name="video">Videos</string>
    <string name="image">Images</string>
    <string name="video_details">Video Details</string>
    <string name="image_details">Image Details</string>
    <string name="limit60">The converting video you selected is greater than the 60 seconds limit, please change it.</string>
    <string name="shareTips1">Share GIF on</string>
    <string name="shareTips2">directly may not showing correctly</string>
    
    
    <string name="Documents">Documents</string>
    <string name="Clipboard">Clipboard</string>
    <string name="Web">Web</string>
    <string name="Photo">Photo</string>
    <string name="PDFs">PDFs</string>
    
    <string name="btn_ok">OK</string>
    <string name="btn_pick">Pick From Gallery</string>
    <string name="btn_pick_mul">Pick From Gallery (Multiple)</string>
</resources>
